syntax = "proto3";

package user;

import "common.proto";

service UserService {
  rpc GetUserProfile (UserProfileRequest) returns (UserProfileResponse);
}

message UserProfileRequest {
  string email = 1;
}

message UserProfileResponse {
  string email = 1;
  string name = 2;
  string type = 3;
  string role = 4;
  Address address = 5;
  string phone = 6;
  CommonError error = 7;
}

message Address {
  string street = 1;
  string city = 2;
  string country = 3;
}